CONCAT (CMAKE_EXE_LINKER_FLAGS "-Wl,-x")
#CONCAT (CMAKE_EXE_LINKER_FLAGS "-Xlinker --no-export-dynamic")

CONCAT (CMAKE_C_CREATE_SHARED_LIBRARY "-Wl,-x")
#CONCAT (CMAKE_C_CREATE_SHARED_LIBRARY "-Xlinker --no-export-dynamic")

INCLUDE_DIRECTORIES( ".." )
INCLUDE_DIRECTORIES( "${LIBTE_BINARY_DIR}/libte" )

# Add FLTK (currently broken on wheezy?)
IF (${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
	SET(FLTK_LIBRARIES "fltk")
ELSE ()
#	SET (FLTK_SKIP_FORMS TRUE)
#	SET (FLTK_SKIP_OPENGL TRUE)
#	SET (FLTK_SKIP_IMAGES TRUE)
#	SET (FLTK_SKIP_FLUID TRUE)
#	FIND_PACKAGE( FLTK REQUIRED )
#	INCLUDE_DIRECTORIES( ${FLTK_INCLUDE_DIRS} )
#	MESSAGE( "FLTK_LIBRARIES: ${FLTK_LIBRARIES}")
#	MESSAGE( "FLTK_INCLUDE_DIRS: ${FLTK_INCLUDE_DIRS}")
#	SET (FLTK_LIBRARIES "/opt/local/lib/libfltk.dylib")

	SET (FLTK_INCLUDE_DIRS "/opt/local/include")
	SET (FLTK_LIBRARIES "/opt/local/lib/libfltk.dylib")
ENDIF()
INCLUDE_DIRECTORIES(${FLTK_INCLUDE_DIRS})

ADD_EXECUTABLE(flterm "flterm.cxx")
TARGET_LINK_LIBRARIES( flterm flte flte ${FLTK_LIBRARIES})

INSTALL (TARGETS flterm
	RUNTIME DESTINATION bin)
